# osso-applet-languageregional

./: AUTHORS  Makefile.am  README  TODO  configure.ac  cplanguageregional.desktop  libcplanguageregional.c  setlocale.c
debian/: changelog  control  osso-applet-cplanguageregional.install
